# engineering-flow-platform-opencode-runtime

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  yaml.py
.venv311/: pyvenv.cfg
docs/: CUSTOM_TOOLS_IMAGE.md  JAVA_MAVEN_IMAGE.md  OBSERVABILITY.md  RUNTIME_CONTRACT.md  TESTING.md
efp_opencode_adapter/: active_run_payload.py  agents_md.py  ai_platform_proxy.py  app_keys.py  atlassian_cli_config.py  attachment_service.py  capabilities.py  chat_api.py  chat_run_registry.py  chat_run_store.py  chat_run_validation.py  chatlog_store.py  compat_api.py  copilot_plugin_auth.py  copilot_proxy.py  event_bridge.py  event_bus.py  file_routes.py  file_service.py  git_cli_auth.py  health.py  index_loader.py  init_assets.py  logging_setup.py  mobile_cli_config.py  opencode_auth.py  opencode_binding_store.py  opencode_client.py  opencode_config.py  opencode_event_proxy.py  opencode_ids.py  opencode_message_adapter.py  opencode_permission_adapter.py  opencode_process.py  opencode_run_state.py  opencode_status_adapter.py  opencode_thin_api.py  opencode_thin_contract.py  outbound_proxy.py  path_utils.py  (+33 more)
integration/: README.md
runtime_contract_tests/: conftest.py  test_health_contract.py  test_optional_chat_task_contract.py  test_optional_smoke_asset_mapping_contract.py  test_readiness_contract.py
scripts/: ci_unit.sh  opencode-snapshot-recent-objects  smoke.sh
tests/: conftest.py  test_agents_md.py  test_ai_platform_proxy.py  test_app_keys.py  test_atlassian_cli_config.py  test_attachment_service.py  (+109 more)
(+4 files in other folders)
